another attempt to fixing alignment issues of Hero section

--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -20,7 +20,7 @@
   width: 90%;
   max-width: 1400px;
   align-items: center;
-  margin-top: -25px;
+  margin-bottom: 25px;
 }
 
 .heroTextBlock {
